--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -1,4 +1,7 @@
 /* No comment provided by engineer. */
+"@" = "@";
+
+/* No comment provided by engineer. */
 "@%@" = "@%@";
 
 /* No comment provided by engineer. */
@@ -45,6 +48,12 @@
 
 /* Title of a button to send a friend request. */
 "add.friend" = "اضافه دوست";
+
+/* Encourages the user to add a link to another social media platform. */
+"add.link" = "افزودن لینک";
+
+/* Displayed when the user has not added any links to their profile. */
+"add.links.prompt" = "@ افزودن رسانه‌های اجتماعی";
 
 /* Title of a button that allows a location to be added. */
 "add.location.title" = "اضافه کردن مکان";
@@ -114,6 +123,9 @@
 
 /* Text to show on banner when no connection is available */
 "banner.no.connection" = "بدون اینترنت";
+
+/* Failure message displayed after trying to block a user. */
+"block.failure" = "خطا در مسدود کردن";
 
 /* Success message displayed after blocking a user. */
 "block.success" = "مسدود شده‌ها";
@@ -703,6 +715,9 @@
 /* link, tapping on which launched the flow to edit favorites */
 "edit.favorites" = "ویرایش مخاطبین محبوب";
 
+/* Title of a screen that allows editing of profile details. */
+"edit.profile" = "ویرایش مشخصات";
+
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "برای اشتراک گذاری باید شماره تلفن رد و بدل کنید";
 
@@ -1192,6 +1207,9 @@
 /* Message displayed next to an incoming friend request. */
 "incoming.friend.request.format" = "@% درخواست دوستی فرستاده است";
 
+/* Refers to the social network Instagram. */
+"instagram.name" = "اینستاگرام";
+
 /* Title of the bottom sheet that is presented only once to explain the moments feature. */
 "introducing.moments" = "لحظه را معرفی میکنیم";
 
@@ -1267,8 +1285,14 @@
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "بیشتر بدانید";
 
+/* Refers to a URL. */
+"link.title" = "لینک";
+
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "برنامه را به روز رسانی کنید.";
+
+/* Indicates a user's social media links. */
+"links.title" = "لینک‌ها";
 
 /* Shown to the user when suggestions are being loaded. */
 "loading.suggestions" = "بارگذاری پیشنهادها";
@@ -1822,6 +1846,9 @@
 /* Item in Profile > Help screen. */
 "profile.help.tos" = "شرایط استفاده از خدمات";
 
+/* Indicates a user's social media links where the variable is the user's name. */
+"profile.links.format" = "لینک‌های @%";
+
 /* Displays remaining number of characters user is allowed to enter while editing their profile name, as well as maximum allowed name length. */
 "profile.name.length" = "%1$d/%2$d";
 
@@ -2284,6 +2311,9 @@
 /* Default preview text shown for a symmetric contact who just joined Halloapp */
 "thread.list.preview.new.user.default" = "@% در هالواپ است! 🎉";
 
+/* Refers to the social network TikTok. */
+"tiktok.name" = "تیک تاک";
+
 /* Camera screen title */
 "title.camera" = "دوربین";
 
@@ -2352,6 +2382,9 @@
 
 /* Instructs user to tap a button (e.g., Tap “Go to Settings” below.) */
 "tutorial.tap.below" = "روی «%@» کلیک کنید.";
+
+/* Refers to the social network formerly known as Twitter. */
+"twitter.name" = "x.com";
 
 /* Title of an alert when unblocking a user */
 "unblock.title" = "غیرمسدود کردن @%";
@@ -2460,4 +2493,7 @@
 
 /* Text that appears on the splash screen prior to registration. */
 "your.private.social.network" = "به شبکه اجتماعی خصوصی خودتان خوش آمدید";
+
+/* Refers to the social network YouTube. */
+"youtube.name" = "یوتوب";
 
