--- a/Halloapp/es.lproj/InfoPlist.strings
+++ b/Halloapp/es.lproj/InfoPlist.strings
@@ -8,10 +8,10 @@
 "NSContactsUsageDescription" = "Para compartir y ver las publicaciones de tus amigos y familiares, permite que HalloApp cargue tus contactos en sus servidores.";
 
 /* Privacy - Location Always and When In Use Usage Description */
-"NSLocationAlwaysAndWhenInUseUsageDescription" = "Esto nos permite seguir las visitas (TODO)";
+"NSLocationAlwaysAndWhenInUseUsageDescription" = "Esto te permite enviar tu ubicación actual o lugares cercanos en comentarios y chats y nos permite notificarte nuevas sugerencias de Magic Posts.";
 
 /* Privacy - Location Always Usage Description */
-"NSLocationAlwaysUsageDescription" = "Esto nos permite seguir las visitas (TODO)";
+"NSLocationAlwaysUsageDescription" = "Esto te permite enviar tu ubicación actual o lugares cercanos en comentarios y chats y nos permite notificarte nuevas sugerencias de Magic Posts.";
 
 /* Privacy - Location When In Use Usage Description */
 "NSLocationWhenInUseUsageDescription" = "Esto te permite enviar tu ubicación actual o lugares cercanos en comentarios y chats.";
