--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -89,13 +89,13 @@
 "Delete" = "Eliminar";
 
 /* Describes what 'All Friends' feed privacy setting means. */
-"feed.privacy.descr.all" = "Compartir con todos mis contactos";
+"feed.privacy.descr.all" = "Compartir con todos mis amigos";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "Compartir con mis contactos excepto con la gente que yo escoja";
 
 /* Describes what 'Favorites' feed privacy setting means. */
-"feed.privacy.descr.only" = "Compartir solamente con contactos seleccionados";
+"feed.privacy.descr.only" = "Compartir solo con amigos seleccionados";
 
 /* Button to dismiss edit favorites modal */
 "feed.privacy.list.dismiss.edit.favorites" = "Ahora no";
